<resources>

    <string name="app_name">西邮成绩</string>
    <string name="history">历史</string>
    <string name="title_activity_main">CardsUI</string>
    <string name="title">Title</string>
    <string name="score_title">课程--------成绩-------平时-------期末</string>
    <string name="desc">Description</string>
    <string name="overflow">Menu Overflow</string>
    <string name="color_stripe">Color Stripe</string>
    <string name="search">搜索</string>
    <string name="xn">学年</string>
    <string name="team">学期</string>
    <string name="first_team">第一学期</string>
    <string name="second_team">第二学期</string>
    <string name="hi">Hi~</string>
    <string name="rank_message">你位于本专业</string>
    <string name="times">名</string>
    <string name="blank"></string>
    <!-- 学年 -->
    <string-array name="xn">
        <item>2012-2013</item>
        <item>2013-2014</item>
        <item>2014-2015</item>
        <item>2015-2016</item>
    </string-array>

    <string name="add_friend">添加好友</string>
    <string name="friend_list">好友列表</string>
    <string name="friend_make_up">补考好友</string>
    <string name="friend_recommand">好友推荐</string>
    <string name="friend_apply">好友申请</string>
    <string name="my_rank">我的排名</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请在此输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="register_txt3">用户注册</string>
    <string name="register_txt4">账号(9位以内数字 )</string>
    <string name="register_txt5">请输入邮箱</string>
    <string name="register_txt6">请输入昵称</string>
    <string name="register_txt7">请输入密码</string>
    <string name="register_txt8">请选择大学</string>
    <string name="not_login">无法登录?</string>
    <string name="set_language">语言</string>
    <string name="login_txt2">上滑可以进入首页 ></string>
    <string name="login_account">账号</string>
    <string name="login_pwd">密码</string>
    <string name="login_email">确认密码</string>
    <!-- 这里 -->
    <string name="login_remember">记住密码</string>
    <string name="message_search_hint">搜索&#8230;</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_able">下拉可以刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_header_hint_lasttime">下拉可以刷新</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="send_state">已读</string>
    <string name="action_settings">Settings</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="username">用户名(例如：马超)</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">附近的人</string>
    <string name="file_resource">文件资料</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="english">中文</string>
    <!-- since here -->
    <string name="undetermined">待定</string>
    <string name="about">关于</string>
    <string name="current_version">当前版本</string>
    <string name="official_website">官网</string>
    <string name="email_name">Email</string>
    <string name="email_address">694449212@qq.com</string>
    <string name="address1">开发者/新浪微博/GitHub</string>
    <string name="address2">Mc/@俺是Mc/xiyouMc</string>
    <string name="accountability_unit">负责单位</string>
    <string name="producer">西安邮电3G手机实验室</string>
    <string name="check_for_update">检测新版本</string>
    <string name="subject_math">高等数学</string>
    <string name="num_45">45</string>
    <string name="subject_make_up">补考课程</string>
    <string name="subject_score">成绩</string>
    <string name="subject_failing_rate">挂科率</string>
    <string name="blank2"></string>
    <string name="query_cet">四六级查分</string>
    <string name="candidate_number_title">准考证号</string>
    <string name="candidate_number_tips">输入准考证号</string>
    <string name="name_title">姓名</string>
    <string name="name_tips">输入姓名</string>
    <string name="query">查询</string>
    <string name="query_ask">无法查询？</string>
    <string name="forget_password_username_hint">请输入注册的账号</string>
    <string name="forget_password_email_hint">请输入注册的邮箱</string>
    <string name="forget_password_mode1">方式1</string>
    <string name="forget_password_mode2">方式2</string>
    <string name="forget_password_mode1_fast">方式一(快速)</string>
    <string name="forget_password_txt1">用户需要输入注册账号与注册邮箱，立刻找回密码</string>
    <string name="forget_password_mode2_recommended">方式二(推荐)</string>
    <string name="forget_password_txt2">用户只需要输入注册账号，系统将发送邮件到用户邮箱，用户需要自行登录邮箱进行验证，找回密码</string>
    <string name="forgetcet_txt1">万能四六级查询</string>
    <string name="forgetcet_school_code">学校代码</string>
    <string name="forgetcet_level_code">等级代码</string>
    <string name="forgetcet_txt2">年份＋第几次(1，2)＋四六级(1，2)</string>
    <string name="forgetcet_room_num">考场号</string>
    <string name="forgetcet_seat_num">座位号</string>
    <string name="forgetcet_txt3">忘记准考证号?</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="opinion_and_feedback">意见反馈</string>
    <string name="feedback_txt1">请输入您要反馈的问题</string>
    <string name="feedback_txt2">请输入您的手机号</string>
    <string name="commit">提交</string>
    <string name="feedback_txt3">您的联系方式有助于我们沟通和解决问题，仅工作人员可见。QQ客服群：278384923</string>
    <string name="student_id">学号</string>
    <string name="md_txt1">说说详情</string>
    <string name="md_txt2">15:30:30</string>
    <string name="md_txt3">1991-05-29</string>
    <string name="md_txt4">我是帅哥哥王玉超</string>
    <string name="md_txt5">1111</string>
    <string name="md_txt6">请输入你的评论</string>
    <string name="md_comment">评论</string>
    <string name="pub_publish">发布消息</string>
    <string name="setting_change_pwd">修改密码</string>
    <string name="setting">设置</string>
    <string name="language">多语言</string>
    <string name="save">保存</string>
    <string name="chinese">简体中文</string>
    <string name="English">English</string>
    <string name="setting_pre_pwd">旧密码</string>
    <string name="setting_new_pwd">新密码</string>
    <string name="setting_txt1">输入旧密码</string>
    <string name="setting_txt2">字母、数字、符号至少两个</string>
    <string name="setting_txt3">重复密码</string>
    <string name="setting_txt4">重复新密码</string>
    <string name="change">修改</string>
    <string name="cet_title">四六级成绩</string>
    <string name="cet_txt1">考生姓名:</string>
    <string name="cet_txt2">学校:</string>
    <string name="cet_txt3">准考证号:</string>
    <string name="school">西安邮电大学</string>
    <string name="cet_txt5">123123123123</string>
    <string name="cet_txt6">您的成绩总分:</string>
    <string name="cet_txt7">听力:</string>
    <string name="cet_txt8">阅读:</string>
    <string name="cet_txt9">写作和翻译:</string>
    <string name="cet_425">425</string>
    <string name="cet_100">100</string>
    <string name="by">By</string>
    <string name="mc">MC</string>
    <string name="for_xu">For Xiyou</string>
    <string name="card_txt1">2013-2014 第一学期</string>
    <string name="card_subject">课程名称</string>
    <string name="card_final_score">最终成绩</string>
    <string name="card_class_score">平时成绩</string>
    <string name="card_paper_score">卷面成绩</string>
    <string name="lib_account">图书馆账号</string>
    <string name="lib_pwd">图书馆密码</string>
    <string name="binding">绑定</string>
    <string name="nick">nick</string>
    <string name="xiyou_jisuanji">xiyou\'jisuanji</string>
    <string name="add_a_friend">加好友</string>
    <string name="search_friend">找好友</string>
    <string name="input_account">输入账号</string>
    <string name="input_pwd">输入密码</string>
    <string name="agree">同意</string>
    <string name="hello">你好</string>
    <string name="book_name">书名：</string>
    <string name="expired">到期：</string>
    <string name="sample">fasfsafsadfsdfdsfsdfsdfsdfsdfsdfdsf</string>
    <string name="guest">游客</string>
    <string name="score_query">成绩查询</string>
    <string name="score_statistic">成绩统计</string>
    <string name="my_lib">我的图书馆</string>
    <string name="option">选项</string>
    <string name="log_out">注销</string>
    <string name="floor_1st">1楼</string>
    <string name="view_more">\n查看更多...\n</string>
    <string name="loading">正在加载中...</string>
    <string name="waiting">请稍等...</string>
    <string name="logining">正在登录</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="repeat_login">服务器异常，请重新登录</string>
    <string name="repeating_login">服务器异常，正在重新登录</string>
    <string name="check_version">最新版本</string>
    <string name="save_Qr_code">保存二维码</string>
    <string name="edit_feedmsg">请输入意见</string>
    <string name="isQuit">你确定要注销吗</string>
    <string name="select_picture">选择本地图片</string>
    <string name="photo">拍照</string>
    <string name="setPhoto">设置头像</string>
    <string name="querying">正在查询</string>
    <string name="bind">绑定账号</string>
    <string name="h5_default_confirm">确定</string>
    <string name="h5_default_cancel">取消</string>
</resources>