<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#FAEBD7"
              android:orientation="vertical">

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_title_bar"
                android:text="找回密码"
                android:textColor="@color/white"
                android:textSize="28sp"/>

        <!-- 返回按钮 -->

        <Button
                android:id="@+id/butBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_back"/>
    </FrameLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp">

        <!-- 注册账号 -->

        <EditText
                android:id="@+id/etAccount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/forget_password_username_hint"
                android:inputType="numberDecimal">
        </EditText>

        <!-- 注册邮箱 -->

        <EditText
                android:id="@+id/etEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/forget_password_email_hint"
                android:inputType="textEmailAddress">
        </EditText>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <!-- 方式1 -->

            <Button
                    android:id="@+id/butGetPassword1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forget_password_mode1"
                    android:textColor="@color/red"
                    android:textSize="20sp"/>

            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"/>
            <!-- 方式2 -->

            <Button
                    android:id="@+id/butGetPassword2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forget_password_mode2"
                    android:textColor="@color/red"
                    android:textSize="20sp"/>
        </LinearLayout>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_mode1_fast"
                android:textColor="@color/red"
                android:textSize="15sp"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_txt1"
                android:textColor="@color/black"
                android:textSize="15sp"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_mode2_recommended"
                android:textColor="@color/red"
                android:textSize="15sp"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_txt2"
                android:textColor="@color/black"
                android:textSize="15sp"/>
    </LinearLayout>

</LinearLayout>