<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0">

        <TableRow>

            <!-- android:background="#aa0000" -->

            <TextView
                    android:id="@+id/kecheng"
                    android:gravity="center_horizontal"
                    android:padding="3dip"
                    android:text="@string/card_subject"/>
            <!-- android:background="#00aa00" -->

            <TextView
                    android:id="@+id/cj"
                    android:gravity="center_horizontal"
                    android:padding="3dip"
                    android:text="@string/card_final_score">
            </TextView>
            <!-- android:background="#0000aa" -->

            <TextView
                    android:id="@+id/guakelv"
                    android:gravity="center_horizontal"
                    android:padding="3dip"
                    android:text="@string/card_class_score"/>
            <!-- android:background="#8B1A1A" -->

            <Button
                    android:id="@+id/send_recommon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="3dip"
                    android:textSize="5pt"
                    android:text="@string/search_friend"/>
        </TableRow>
    </TableLayout>

</LinearLayout>
