<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="horizontal"
              android:paddingTop="5dp">

    <!-- 楼号 -->

    <TextView
            android:id="@+id/floor"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/floor_1st"
            android:textColor="#FF8C00"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <!-- 昵称 -->

            <TextView
                    android:id="@+id/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/add_nick"
                    android:textColor="#FF8C00"
                    android:textSize="18dp"/>


            <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingRight="5dp"
                    android:text="@string/md_txt2"
                    android:textColor="@color/dimgray"
                    android:textSize="12dp"/>

            <!-- 日期 -->

            <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/time"
                    android:paddingRight="10dp"
                    android:text="@string/md_txt3"
                    android:textColor="@color/dimgray"
                    android:textSize="12dp"/>
        </RelativeLayout>
        <!-- 说说详情 -->

        <TextView
                android:id="@+id/content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/md_txt4"
                android:textColor="@color/black"/>
    </LinearLayout>

    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/expand_divider"/>

</LinearLayout>