<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/content_frame"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#F8F8FF"
              android:orientation="vertical">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/main_title_bar"
            android:orientation="horizontal">

        <Button
                android:id="@+id/butMy"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/transparent"
                android:gravity="center_vertical"
                android:text="@string/setting_change_pwd"
                android:textColor="@color/white"
                android:textSize="20dp"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp">

                <TextView
                        android:layout_width="80dp"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text="@string/add_name"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>
                <!-- 修改密码 -->

                <EditText
                        android:id="@+id/etAccount"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:textSize="15sp">
                </EditText>

            </LinearLayout>

            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/expand_divider"/>
            <!-- 选项设置 -->

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp">

                <TextView
                        android:layout_width="80dp"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text="@string/setting_pre_pwd"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>
                <!-- 修改密码 -->

                <EditText
                        android:id="@+id/etPassword1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/setting_txt1"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="15sp">
                </EditText>
            </LinearLayout>

            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/expand_divider"/>
            <!-- 选项设置 -->

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp">

                <TextView
                        android:layout_width="80dp"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text="@string/setting_new_pwd"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>
                <!-- 修改密码 -->

                <EditText
                        android:id="@+id/etPassword2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/setting_txt2"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="15sp">
                </EditText>
            </LinearLayout>

            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/expand_divider"/>
            <!-- 选项设置 -->

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp">

                <TextView
                        android:layout_width="80dp"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text="@string/setting_txt3"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>

                <EditText
                        android:id="@+id/corfimPassword2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/setting_txt4"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="15sp">
                </EditText>
            </LinearLayout>

            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/expand_divider"/>

            <Button
                    android:id="@+id/butAlter"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="29dp"
                    android:background="@drawable/btn_click"
                    android:gravity="center"
                    android:text="@string/change"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>